# frictune

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  a.html  b.html  routing.toml  tags.db  tags.db-shm  tags.db-wal  temp.txt  template.hbs
settings/: tag_seg.pest
settings/config/: path.toml
src/: conf.rs  db.rs  lib.rs  logger.rs  main.rs  ui.rs
src/db/: crud.rs  db.rs  gluesql.rs
src/logger/: lib_logger.rs  naive.rs  tui.rs  web_logger.rs
src/ui/: cli.rs  graph.rs
tests/: primitive_apis.rs
webpage_asset/: draw.js
