[package]
name = "frictune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { features = [ "runtime-async-std", "sqlite" ] }
futures = "0.3"
serde = "1.0"
serde_derive = "1.0"
confy = "0.5.1"
clap = { version = "4.2.4", features = ["derive"] }

iced = "0.9.0"
dioxus-web = "0.3.1"
dioxus = "0.3.2"
si_trace_print = "0.3.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
handlebars = "4.3.6"
serde_json = "1.0.96"
chrono = "0.4.24"
