[package]
name = "frictune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.96"
confy = "0.5.1"
clap = { version = "4.2.4", features = ["derive"] }

dioxus-web = "0.3.1"
dioxus = "0.3.2"
si_trace_print = "0.3.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
handlebars = "4.3.6"
chrono = "0.4.24"
regex = "1.8.1"
pest = "2.6.0"
pest_derive = "2.6.0"
thiserror = "1.0.40"
cfg-if = "1.0.0"
anyhow = "1.0.71"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gluesql = "0.13.1"
env_logger = "0.10.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { version = "0.7.0-alpha.2", features = [ "runtime-async-std", "sqlite" ] }
