[package]
name = "frictune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.96"
dioxus = "0.3.2"
dioxus-web = "0.3.1"
si_trace_print = "0.3.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
handlebars = "4.3.6"

regex = "1.8.1"
pest = "2.6.0"
pest_derive = "2.6.0"
thiserror = "1.0.40"
cfg-if = "1.0.0"
anyhow = "1.0.71"
log = "0.4.17"
gluesql = { version = "0.13.1", default-features = false, features = ["sled-storage", "memory-storage"] }
bincode = "1.3.3"
chrono = "0.4.24"
itertools = "0.10.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
env_logger = "0.10.0"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.84"
gloo = "0.8.0"
web-sys = "0.3.62"
js-sys = "0.3.63"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { version = "0.7.0-alpha.2", features = [ "runtime-async-std", "sqlite" ] }
confy = "0.5.1"
clap = { version = "4.2.4", features = ["derive"] }
